postgresql-common (161) UNRELEASED; urgency=medium

  * pg_virtualenv: Use "ip" to start lo when available.

 -- Christoph Berg <myon@debian.org>  Fri, 15 Aug 2014 10:13:51 +0200

postgresql-common (160) unstable; urgency=medium

  [ Martin Pitt ]
  * supported-versions: Set 9.4 as default for Ubuntu 14.10.
  * debian/maintscripts-functions: Call update-alternatives under C locale to
    fix parsing for non-English locales. (LP: #1293596)
  * pg_createcluster: Fix test if specified owner/group ID is numeric. Thanks
    Sven Berkvens-Matthijsse! (LP: #1329227)

  [ Christoph Berg ]
  * Use dh-systemd to enable postgresql.service on install. (Closes: #757612)
  * Set Multi-Arch: foreign in postgresql-common, postgresql-client-common,
    postgresql-client, and postgresql-doc, and document this in
    doc/dependencies.{dia,png}. (Closes: #757520)
  * Update examples in README.Debian for 9.4. (Closes: #756007)
  * Install README.systemd.

 -- Christoph Berg <christoph.berg@credativ.de>  Mon, 11 Aug 2014 15:39:39 +0200

postgresql-common (159) unstable; urgency=low

  * supported-versions: Set 9.4 as default for jessie and unstable.
  * systemd unit files are now installed to their proper locations.
  * Install /usr/lib/tmpfiles.d/postgresql.conf.
  * pgcommon.sh: New shell function module containing get_release and
    locale_gen. Used by supported-versions and testsuite; also usable by other
    packages.
  * pg_ctlcluster, PgCommon.pm: Fix warning on corrupt empty pid files.
  * pg_ctlcluster: New --stdlog option to be used with --foreground that
    redirects stderr to our standard log files. Used in postgresql@.service.
  * pg_ctlcluster: Ignore errors when stat'ing the logfile.
  * pg_ctlcluster: use strict.
  * Debconf translation updates, thanks!
    + da by Joe Dalton. (Closes: #753952)

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 24 Jul 2014 11:52:57 +0200

postgresql-common (158) experimental; urgency=medium
